<resources>
    <string name="app_name">Weather_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_text_size">MainFragment</string>
    <string name="temperature">TEMPERATURE:</string>
    <string name="temperature_feels_like">TEMPERATURE FEELS LIKE:</string>
    <string name="temp">Temp ℃:</string>
    <string name="lat_lon">lat/lon</string>
    <string name="city_name">Tyumen</string>
    <string name="server">Server</string>
    <string name="local">Local</string>
    <string name="settings">Settings</string>
    <string name="error">error</string>
    <string name="reload">reload</string>
    <string name="atmospheric_pressure">ATMOSPHERIC PRESSURE:</string>
    <string name="enter_the_address">Enter the address</string>
    <string name="search">Search</string>
    <string name="weather">weather</string>
</resources>