<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_source_history"
        android:icon="@drawable/ic_baseline_phonelink_erase_24"
        android:title="@string/local"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_source_server"
        android:icon="@drawable/ic_baseline_phonelink_ring_24"
        android:title="@string/server"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>