<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_the_address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <Button
                android:id="@+id/buttonShowWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/fragment_maps" />

</LinearLayout>